@@ -1,3 +1,8 @@
+2011-06-03  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/NSString.m: [(-getLineStart:end:contentsEnd:forRange:)]
+	Fix off-by-one error iun reported contents end for DOS style lines.
+
 2011-06-02 Riccardo Mottola <rm@gnu.org>
 
 	* Source/NSTimeZone.m: Disable use of tzname on OpenBSD too.
